<resources>
    <string name="app_name">Chat_Application</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="profile">Profile</string>
    <string name="user_information">User Information</string>
    <string name="save">Save</string>
</resources>